--- a/frontend/boardheaven/package.json
+++ b/frontend/boardheaven/package.json
@@ -16,8 +16,7 @@
 		"@types/cookie": "^0.5.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.4"
+		"typescript": "^5.0.0"
 	},
 	"type": "module"
 }
