--- a/frontend/boardheaven/package.json
+++ b/frontend/boardheaven/package.json
@@ -11,12 +11,14 @@
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
+		"@rollup/plugin-typescript": "^11.1.6",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
 		"@types/cookie": "^0.5.1",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"typescript": "^5.0.0"
+		"svelte": "^4.2.8",
+		"svelte-check": "^3.6.3",
+		"svelte-preprocess": "^5.1.3",
+		"typescript": "^5.3.3"
 	},
 	"type": "module"
 }
