--- a/frontend/boardheaven/package.json
+++ b/frontend/boardheaven/package.json
@@ -20,5 +20,8 @@
 		"svelte-preprocess": "^5.1.3",
 		"typescript": "^5.3.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"ws": "^8.16.0"
+	}
 }
