--- a/frontend/boardheaven/package.json
+++ b/frontend/boardheaven/package.json
@@ -2,7 +2,7 @@
 	"name": "boardheaven",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --port 8181",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
